[gd_scene load_steps=6 format=3 uid="uid://bsjsfub8fbqkh"]

[ext_resource type="Theme" uid="uid://b0abc7ba34vc0" path="res://Resources/Themes/ButtonTxt.tres" id="1"]
[ext_resource type="Shortcut" uid="uid://nabj28m1yt3r" path="res://Resources/Material/AcceptShortCut.tres" id="2"]
[ext_resource type="Script" uid="uid://cta4hnk4c5jce" path="res://Select.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://drfadk3uchvj4" path="res://EnterSystem.tscn" id="4"]
[ext_resource type="Theme" uid="uid://cdcpgoqljsocp" path="res://Resources/Themes/TitleTxt.tres" id="5"]

[node name="Select" type="Node"]
script = ExtResource("3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -78.5
offset_right = 175.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5")
text = "Blocks: "

[node name="EnterSystem" parent="." instance=ExtResource("4")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 198.0
offset_top = -145.0
offset_right = 198.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 116.0
offset_right = 110.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
shortcut = ExtResource("2")
shortcut_in_tooltip = false
text = "Start"
metadata/_edit_layout_mode = 1

[node name="Checker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="CheckBox" type="CheckBox" parent="Checker"]
layout_mode = 0
offset_left = 488.0
offset_top = 311.0
offset_right = 2889.0
offset_bottom = 696.0
scale = Vector2(0.262, 0.262)
theme = ExtResource("1")
theme_override_font_sizes/font_size = 308
shortcut_in_tooltip = false
text = "with spacing"
icon_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Checker/CheckBox" to="." method="_on_CheckBox_toggled"]
